--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "my-app",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://dazgzz2000.github.io/2023-midterm-project/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
